--- a/login/login.html
+++ b/login/login.html
@@ -86,7 +86,6 @@
     <main>
         <h1>Log In</h1>
         <form>
-
             <label>Email</label>
             <input type="text" placeholder="Enter your registered email" id="email" />
             <label>Password</label>
@@ -156,7 +155,7 @@
                     <h2>stay updated</h2>
                 </b>
                 <div class="example">
-                    <input type="email" name="email" id="emailx" placeholder="example@example.com">
+                    <input type="email" name="email" id="email" placeholder="example@example.com">
                     <input type="button" value="SUBMIT">
                 </div>
                 <button>DOWNLOAD THE APP</button>
@@ -177,64 +176,6 @@
     <script>
 
 
-$('.responsive').slick({
-        dots: false,
-        infinite: true,
-        speed: 300,
-        slidesToShow: 1,
-        slidesToScroll: 4,
-        autoplay: true,
-        autoplaySpeed: 5000,
-        // responsive: [
-        //     {
-        //         breakpoint: 1024,
-        //         settings: {
-        //             slidesToShow: 3,
-        //             slidesToScroll: 3,
-        //             infinite: true,
-        //             dots: true
-        //         }
-        //     },
-        //     {
-        //         breakpoint: 600,
-        //         settings: {
-        //             slidesToShow: 2,
-        //             slidesToScroll: 2
-        //         }
-        //     },
-        //     {
-        //         breakpoint: 480,
-        //         settings: {
-        //             slidesToShow: 1,
-        //             slidesToScroll: 1
-        //         }
-        //     }
-        //     // You can unslick at a given breakpoint now by adding:
-        //     // settings: "unslick"
-        //     // instead of a settings object
-        // ]
-    });
-
-    $('.main-imgs').slick({
-        dots: true,
-        infinite: true,
-        speed: 1000,
-        slidesToShow: 1,
-        slidesToScroll: 1,
-        autoplay: true,
-        autoplaySpeed: 4000,
-        button: false,
-
-    });
-
-
-
-    $('.lovedbyimg').slick({
-        dots: true,
-        autoplay: true,
-        autoplaySpeed: 10000,
-
-    });
 
         document.querySelector("#popu").addEventListener("click", () => {
             document.querySelector("body").style.overflowY = "hidden"
